--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "tsc",
     "watch": "tsc -w",
     "lint": "eslint --ext .ts ./src",
-    "start": "npm run build && electron ./dist/main.js"
+    "start": "npm run build && electron ./dist/main.js",
+    "dev": "concurrently 'npm run watch' 'npm start'"
   },
   "repository": "https://github.com/konstaka/dictionary",
   "author": "Konsta Kanniainen",
@@ -14,6 +15,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
+    "concurrently": "^7.0.0",
     "electron": "^16.0.7",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
