--- a/package.json
+++ b/package.json
@@ -2,17 +2,25 @@
   "name": "dictionary",
   "version": "1.0.0",
   "description": "A Qern dictionary for developing the conlang.",
+  "main": "./dist/main.js",
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
     "lint": "eslint --ext .ts ./src",
-    "start": "npm run build && electron ./dist/main.js",
-    "dev": "concurrently 'npm run watch' 'npm start'"
+    "start": "npm run build && electron-forge start",
+    "dev": "concurrently 'npm run watch' 'npm start'",
+    "package": "electron-forge package",
+    "make": "rm -rf ./out && npm run build && electron-forge make"
   },
   "repository": "https://github.com/konstaka/dictionary",
   "author": "Konsta Kanniainen",
   "license": "See LICENSE",
   "devDependencies": {
+    "@electron-forge/cli": "^6.0.0-beta.63",
+    "@electron-forge/maker-deb": "^6.0.0-beta.63",
+    "@electron-forge/maker-rpm": "^6.0.0-beta.63",
+    "@electron-forge/maker-squirrel": "^6.0.0-beta.63",
+    "@electron-forge/maker-zip": "^6.0.0-beta.63",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
     "concurrently": "^7.0.0",
@@ -25,5 +33,35 @@
     "prettier": "^2.5.1",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.5.4"
+  },
+  "dependencies": {
+    "electron-squirrel-startup": "^1.0.0"
+  },
+  "config": {
+    "forge": {
+      "packagerConfig": {},
+      "makers": [
+        {
+          "name": "@electron-forge/maker-squirrel",
+          "config": {
+            "name": "dictionary"
+          }
+        },
+        {
+          "name": "@electron-forge/maker-zip",
+          "platforms": [
+            "darwin"
+          ]
+        },
+        {
+          "name": "@electron-forge/maker-deb",
+          "config": {}
+        },
+        {
+          "name": "@electron-forge/maker-rpm",
+          "config": {}
+        }
+      ]
+    }
   }
 }
